--- a/lab3/tvarkaraštis.html
+++ b/lab3/tvarkaraštis.html
@@ -9,50 +9,55 @@
 
 <body>
     <header>
-        <img src="MIF_logo.png" width="200" alt="MIF" title="MIF">
-        <h1 class="inline centered">Tvarkaraštis</h1>
+        <div class="innerPage centered margin-b10 ">
+            <img src="MIF_logo.png" alt="MIF" title="MIF">
+            <h1 class="inline">Tvarkaraštis</h1>
+            <nav class="inline">
+                <a href="tvarkaraštis.html">Tvarkaraštis</a>
+                <a href="input.html">Įvedimo forma</a>
+            </nav>
+        </div>
     </header>
-    <nav>
-        <a href="tvarkaraštis.html">Tvarkaraštis</a>
-        <a href="input.html">Įvedimo forma</a>
-    </nav>
-    <section>
-        <h2>Naujienos</h2>
-        <article>
-            <h3>Pakeitimas</h3>
-            <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-                eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla
-                ut metus varius laoreet. Quisque rutrum</p>
-            <p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus.
-                Maecenas tempus, tellus <em> eget <a href="https://mif.vu.lt/timetable/mif/">Tvarkarštis<a> condimentum</em> rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed
-                ipsum.
-            </p>
-        </article>
-        <article>
-            <h3 danger>Svarbi naujiena</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
-                sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-                nec, pellentesque eu, pretium quis, sem.</p>
-            <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
-                justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer
-                tincidunt. Cras dapibus.</p>
+    <div class="after_header innerPage">
+        <section>
+            <h2>Naujienos</h2>
+            <article>
+                <h3>Pakeitimas</h3>
+                <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat
+                    vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus
+                    viverra nulla ut metus varius laoreet. Quisque rutrum</p>
+                <p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam
+                    rhoncus. Maecenas tempus, tellus
+                    <em> eget
+                        <a href="https://mif.vu.lt/timetable/mif/">Tvarkarštis
+                            <a> condimentum</em> rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
+                </p>
+            </article>
+            <article>
+                <h3 danger>Svarbi naujiena</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                    Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
+                    ultricies nec, pellentesque eu, pretium quis, sem.</p>
+                <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim
+                    justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer
+                    tincidunt. Cras dapibus.</p>
 
-        </article>
-    </section>
-    <section>
-        <h2>Vertinimas</h2>
-        <table>
+            </article>
+        </section>
+        <section>
+            <h2>Vertinimas</h2>
+            <table>
                 <tr>
                     <th rowspan="2">Atsiskaitymai</th>
                     <th colspan="4">Paskaitos</th>
                 </tr>
                 <tr>
                     <th>PSP</th>
-                    <th>PST</th>    
+                    <th>PST</th>
                     <th id="it">IT</th>
                     <th>ŽKS</th>
                 </tr>
-                <tr> 
+                <tr>
                     <td>Egzaminas</td>
                     <td>7</td>
                     <td>6</td>
@@ -88,7 +93,8 @@
                     <td>0.5</td>
                 </tr>
             </table>
-    </section>
+        </section>
+    </div>
     <aside>
         #titanic {
         <br> float: none;
