main page finished

--- a/lab3/input.html
+++ b/lab3/input.html
@@ -58,6 +58,10 @@
             </form>
         </section>
     </div>
+    <footer>
+            All right reserved. MP 4 IT - 2017
+        </footer>
 </body>
+
 
 </html>
