--- a/lab3/tvarkaraštis.html
+++ b/lab3/tvarkaraštis.html
@@ -7,19 +7,19 @@
     <link rel="stylesheet" href="tvarkaraštis.css" type="text/css">
 </head>
 
-<body>
+<body class="background">
     <header>
         <div class="innerPage centered margin-b10 ">
             <img src="MIF_logo.png" alt="MIF" title="MIF">
             <h1 class="inline">Tvarkaraštis</h1>
             <nav class="inline">
-                <a href="tvarkaraštis.html">Tvarkaraštis</a>
-                <a href="input.html">Įvedimo forma</a>
+                <a href="tvarkaraštis.html">Tvarkaraštis</a><a href="input.html">Įvedimo forma</a>
             </nav>
         </div>
     </header>
-    <div class="after_header innerPage">
+    <main class="after_header innerPage">
         <section>
+            <header></header>
             <h2>Naujienos</h2>
             <article>
                 <h3>Pakeitimas</h3>
@@ -94,14 +94,9 @@
                 </tr>
             </table>
         </section>
-    </div>
-    <aside>
-        #titanic {
-        <br> float: none;
-        <br> }
-    </aside>
+    </main>
     <footer>
-        All right reserver. MP 4 IT - 2017
+        All right reserved. MP 4 IT - 2017
     </footer>
 </body>
 
