pridėti keli formos laukai

--- a/lab3/input.html
+++ b/lab3/input.html
@@ -43,14 +43,20 @@
                     <input type="radio" name="vieta" value="Naug."> Naugarduko g.
                 </label>
                 <br> Vertinimas:
-                <SELECT multiple size="6" name="vertinimas">
-                    <OPTION selected value="egz">Egzaminas</OPTION>
-                    <OPTION value="lab">Laboratoriniai darbai</OPTION>
-                    <OPTION value="prez">Pranešimas</OPTION>
-                    <OPTION value="lank">Lankomumas</OPTION>
-                    <OPTION value="klaus">Klausimai paskaitos menu</OPTION>
-                    <OPTION value="mini">Mini užduotėlės</OPTION>
-                </SELECT>
+                <select multiple size="6" name="vertinimas">
+                    <option selected value="egz">Egzaminas</option>
+                    <option value="lab">Laboratoriniai darbai</option>
+                    <option value="prez">Pranešimas</option>
+                    <option value="lank">Lankomumas</option>
+                    <option value="klaus">Klausimai paskaitos menu</option>
+                    <option value="mini">Mini užduotėlės</option>
+                </select>
+                <br> Laikas:
+                <input type="time" name="laikas">
+                <br> Spalva:
+                <input type="color" name="spalva">
+                <br>
+
                 <br>
                 <input type="submit" value="Išsaugoti">
                 <input type="reset" value="Išvalyti">
