updated for examination

--- a/lab3/tvarkaraštis.html
+++ b/lab3/tvarkaraštis.html
@@ -23,18 +23,18 @@
             <h2>Naujienos</h2>
             <article>
                 <h3>Pakeitimas</h3>
-                <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat
+                <p> <span class="red blue">Vivamus</span> elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat
                     vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus
                     viverra nulla ut metus varius laoreet. Quisque rutrum</p>
                 <p>Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam
                     rhoncus. Maecenas tempus, tellus
                     <em> eget
                         <a href="https://mif.vu.lt/timetable/mif/">Tvarkarštis
-                            <a> condimentum</em> rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
+                        </a> condimentum</em> rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
                 </p>
             </article>
             <article>
-                <h3 danger>Svarbi naujiena</h3>
+                <h3>Svarbi naujiena</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
                     Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,
                     ultricies nec, pellentesque eu, pretium quis, sem.</p>
