--- a/prat/12-14/page.html
+++ b/prat/12-14/page.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>4 laboratorinio darbo atsiskaitymas</title>
+    <title>12-14 mini</title>
 </head>
 
 <body>
